fix: edit path to image, add z-index

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -4,6 +4,7 @@
         position: relative;
         background-color: $white;
         padding: 1.0625rem 1.5rem;
+        z-index: 1;
     }
 
     &__logo {
@@ -41,7 +42,7 @@
         margin-top: 1.5rem;
         padding: 1.625rem;
         border-radius: 5px;
-
+        z-index: 1;
 
         a {
             display: block;
@@ -119,7 +120,7 @@
         bottom: 0;
         left: 0;
         background-image: linear-gradient($darkBlue, transparent);
-
+        z-index: 1;
     }
 
 
