--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -227,6 +227,7 @@ button:hover,
   position: relative;
   background-color: white;
   padding: 1.0625rem 1.5rem;
+  z-index: 1;
 }
 
 .header__logo img {
@@ -256,6 +257,7 @@ button:hover,
   margin-top: 1.5rem;
   padding: 1.625rem;
   border-radius: 5px;
+  z-index: 1;
 }
 
 .header__menu a {
@@ -317,6 +319,7 @@ button:hover,
   bottom: 0;
   left: 0;
   background-image: linear-gradient(#2d314d, transparent);
+  z-index: 1;
 }
 
 .hero {
